EB-2003-04-09-0  Bugfix:    cannot qalter/qhold/qrls several tasks of same job
                 Issue:     526
                 Bugtraq:   4845505
                 Changed:   qalter
                 Review:    JG

BD-2003-04-08-0  Bugfix:    Make qmake actually compile under FreeBSD.
                 Changed:   qmake

CR-2003-04-08-0  Bugfix:    using -xO3 instead of -xO4 for SOLARIS86
                 Changed:   aimk for compiling SOLARIS86 binaries

EB-2003-04-08-1  Bugfix:    qdel -u <user> does not delete all jobs of the user
                 Issue:     524
                 Bugtraq:   4842878
                 Changed:   qdel
                 Review:    JG

EB-2003-04-08-0  Bugfix:    sge_shepherd does not exit on SIGTERM
                 Issue:     522
                 Bugtraq:   4844838 
                 Changed:   sge_shepherd
                 Review:    AH

EB-2003-04-07-0  Bugfix:    SGEEE: scheduler dispatches wrong jobs if
                            there are jobs in the list of pending jobs
                            which had an error state or which have 
                            been rescheduled previously
                 Issue:     ???
                 Bugtraq:   ???
                 Changed:   sge_schedd, qstat, qmon
                 Review:    AH, (SD)

CR-2003-04-04-0  Bugfix:    - commd ignored first message for commlib client
                            in case of priority tags messages (used for
                            qmaster <-> execd communication). The first 
                            message was ignored when more than one message
                            with the same priority tag was ready to send.
                            - performance improvement in search_message()
                              (test function parameter outside of search loop)
                            - performance improvement in 
                              look4timeouts_messages()