@@ -1,3 +1,5 @@
+BD-2003-04-10-0  Bugfix:    Sync FreeBSD Makefiles for qmake with HEAD.
+
 EB-2003-04-09-0  Bugfix:    cannot qalter/qhold/qrls several tasks of same job
                  Issue:     526
                  Bugtraq:   4845505
